@@ -16,6 +16,8 @@ test release
 
 readme updates
 
+Bug fix, if space_view_id is not set, it does not send it to the service portal.
+
 = 1.0.2 - March 19, 2019 =
 
 * Fix - WooCommerce Subscription > 2.5.0
